# mlx

./: mlx_patterns.txt
python/src/: ops_short.cpp  trees.cpp
ruby/: Gemfile  README.md  Rakefile  mlx.gemspec  mlx.rb
ruby/examples/: advanced.rb  basic.rb  distributed_mnist.rb  fft.rb  linalg.rb  model_utils.rb  quantized_model.rb  tree_utils.rb
ruby/ext/mlx/: Makefile  core.bundle  extconf.rb  test.rb
ruby/include/: mlx_ruby.h
ruby/mlx/: core.rb  distributed.rb  distributed_run.rb  extension.rb  utils.rb  version.rb
ruby/mlx/nn/: base.rb  init.rb  loss.rb
ruby/src/: CMakeLists.txt  array.cpp  array.diff  constants.cpp  convert.cpp  convert.diff  convert.h  device.cpp  device.diff  distributed.cpp  distributed.diff  export.cpp  export.diff  fast.cpp  fast.diff  fft.cpp  fft.diff  indexing.cpp  indexing.h  linalg.cpp  load.cpp  load.diff  load.h  memory.cpp  metal.cpp  metal.diff  mlx.cpp  mlx_func.cpp  mlx_func.diff  mlx_func.h  ops.cpp  ops.diff  random.cpp  random.diff  stream.cpp  transforms.cpp  transforms.diff  trees.cpp  trees.diff  trees.h  (+3 more)
ruby/tests/: mlx_test_case.rb  run_tests.rb  test_activations.rb  test_array.rb  test_attention.rb  test_autograd.rb  test_bf16.rb  test_blas.rb  test_call_patterns.rb  test_compile.rb  test_constants.rb  test_conv.rb  test_conv_transpose.rb  test_device.rb  test_distributed.rb  test_double.rb  test_dropout.rb  test_einsum.rb  test_eval.rb  test_export_import.rb  test_extension.rb  test_fast.rb  test_fast_sdpa.rb  test_fft.rb  test_gem.rb  test_graph.rb  test_init.rb  test_linalg.rb  test_load.rb  test_losses.rb  test_memory.rb  test_metrics.rb  test_mlx_interface.rb  test_nn.rb  test_nn_layers.rb  test_normalization.rb  test_ops.rb  test_optimizers.rb  test_pooling.rb  test_quantization.rb  (+7 more)
(+23 files in other folders)
